# ariadne-graphql-proxy

./: .gitignore  CHANGELOG.md  GUIDE.md  README.md  cliff.toml  pyproject.toml
.github/workflows/: build.yml  publish.yml  test.yml  tests.yml
ariadne_graphql_proxy/: __init__.py  cache_resolver.py  context_value.py  copy.py  copy_schema.py  errors.py  exceptions.py  foreign_key_resolver.py  get_operation.py  graphql_foreign_key_resolver.py  graphql_proxy_resolver.py  merge.py  merge_schemas.py  narrow_graphql_query.py  output_types.py  print.py  print_operation.py  proxy_resolver.py  proxy_root_value.py  proxy_schema.py  query_filter.py  remote_schema.py  resolvers.py  selections.py  standard_types.py  str_to_field.py  subset_operation.py  unwrap_type.py  utils.py
ariadne_graphql_proxy/cache/: __init__.py  backend.py  cache_key.py  cached_resolver.py  serializer.py  simple_cached_resolver.py
ariadne_graphql_proxy/contrib/aws/: __init__.py  cache_backend.py
ariadne_graphql_proxy/contrib/cloudflare/: __init__.py  cache_backend.py
ariadne_graphql_proxy/contrib/imgix/: __init__.py  query_params_resolver.py
tests/: conftest.py  test_copy_argument_type.py  test_copy_arguments.py  test_copy_directive.py  test_copy_directives.py  test_copy_enum.py  test_copy_field.py  test_copy_field_type.py  test_copy_input.py  test_copy_input_field.py  test_copy_input_field_type.py  test_copy_interface.py  test_copy_object.py  test_copy_scalar.py  test_copy_schema.py  test_copy_schema_subset.py  test_copy_schema_types.py  test_copy_union.py  test_copying_schemas.py  test_foreign_key_resolver.py  test_get_operation.py  test_get_remote_schema.py  test_graphql_proxy_resolver.py  test_merge_args.py  test_merge_enums.py  test_merge_enums_values.py  test_merge_fields.py  test_merge_inputs.py  test_merge_inputs_fields.py  test_merge_interfaces.py  test_merge_objects.py  test_merge_scalars.py  test_merge_schemas.py  test_merge_selection_sets.py  test_merge_selections.py  test_merge_types.py  test_merge_types_maps.py  test_merge_unions.py  test_merging_args.py  test_merging_enums.py  (+31 more)
tests/cache/: conftest.py  test_base_cache_backend.py  test_cached_resolver.py  test_get_cache_key.py  test_get_info_cache_key.py  test_get_operation_cache_key.py  test_get_simple_cache_key.py  test_in_memory_cache.py  test_serializer.py  test_simple_cached_resolver.py
tests/contrib/aws/: test_cache_backend.py
tests/contrib/cloudflare/: test_cache_backend.py
tests/contrib/imgix/: test_query_params_resolver.py
