[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne-graphql-proxy"
description = "Ariadne toolkit for building GraphQL proxies."
authors = [{ name = "Mirumee Software", email = "ariadne@mirumee.com" }]
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["graphql-core>=3.2.0,<3.3", "httpx", "ariadne>=0.23.0"]

[project.optional-dependencies]
dev = ["ipdb"]
test = [
  "freezegun",
  "moto[dynamodb]",
  "pytest",
  "pytest-mock",
  "pytest-httpx",
  "pytest-asyncio",
  "ruff",
]
types = ["mypy>=1.0.0"]

orjson = ["orjson"]

aws = ["asgiref", "boto3"]

[project.urls]
"Homepage" = "https://ariadnegraphql.org/"
"Repository" = "https://github.com/mirumee/ariadne-graphql-proxy"
"Bug Tracker" = "https://github.com/mirumee/ariadne-graphql-proxy/issues"
"Community" = "https://github.com/mirumee/ariadne/discussions"

[tool.hatch.build]
include = ["ariadne_graphql_proxy/**/*.py", "ariadne_graphql_proxy/py.typed"]
exclude = ["tests"]

[tool.hatch.version]
path = "ariadne_graphql_proxy/__about__.py"

[tool.hatch.envs.default]
features = ["dev", "types"]

[tool.hatch.envs.default.scripts]
check = [
  "hatch fmt",
  "hatch test -a -p",
  "hatch test --cover",
  "hatch run types:check",
]

## Types environment

[tool.hatch.envs.types]
features = ["types", "test", "orjson", "aws"]

[tool.hatch.envs.types.scripts]
check = ["mypy ariadne_graphql_proxy"]

## Test environments

[tool.hatch.envs.hatch-test]
features = ["test", "orjson", "aws"]
extra-args = []

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

## Ruff configuration

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 99
exclude = ["tests/main/clients/*/expected_client/*"]

[tool.ruff.lint]
select = ["E", "F", "G", "I", "N", "Q", "UP", "C90", "T20", "TID"]
ignore = ["TID252", "UP006", "UP035"]
task-tags = ["NOTE", "TODO", "FIXME", "HACK", "XXX"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.ruff.lint.isort]
known-first-party = ["ariadne_graphql_proxy"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
