[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne-graphql-proxy"
description = "Ariadne toolkit for building GraphQL proxies."
authors = [{ name = "Mirumee Software", email = "ariadne@mirumee.com" }]
dynamic = ["version"]
requires-python = ">= 3.10"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "graphql-core>=3.2.7,<3.3",
  "httpx~=0.28",
  "ariadne>=1.0.0",
]

[project.optional-dependencies]
dev = ["ipdb", "ruff>=0.15.0,<0.16.0"]
test = [
  "freezegun",
  "moto[dynamodb]",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-httpx",
  "pytest-mock",
]
types = ["ty>=0.0.20,<0.1.0"]
orjson = ["orjson"]
aws = ["asgiref", "boto3"]

[project.urls]
"Homepage" = "https://ariadnegraphql.org/"
"Repository" = "https://github.com/mirumee/ariadne-graphql-proxy"
"Bug Tracker" = "https://github.com/mirumee/ariadne-graphql-proxy/issues"
"Community" = "https://github.com/mirumee/ariadne/discussions"

# Hatch configuration

[tool.hatch.build]
include = ["ariadne_graphql_proxy/**/*.py", "ariadne_graphql_proxy/py.typed"]
exclude = ["tests"]

[tool.hatch.version]
path = "ariadne_graphql_proxy/__about__.py"

[tool.hatch.envs.default]
python = "3.10"
features = ["dev", "types", "test", "orjson", "aws"]
path = ".venv"

[tool.hatch.envs.default.scripts]
lint = ["hatch fmt --check", "hatch run types:check"]
check = [
  "hatch fmt",
  "hatch test --cover",
  "hatch run types:check",
]
changelog-preview = "git cliff --unreleased --strip all"
changelog-update = "git cliff --unreleased -o CHANGELOG.md"
release-notes = "git cliff --latest --strip all"

## Types environment

[tool.hatch.envs.types.scripts]
check = ["ty check"]

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"
dependencies = ["ruff>=0.15.0,<0.16.0"]

## Test environments

[tool.hatch.envs.hatch-test]
features = ["test", "orjson", "aws"]
extra-args = []

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

## Type checker (ty) configuration

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["ariadne_graphql_proxy", "tests"]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"
redundant-cast = "ignore"
# graphql-core / dynamic patterns; tighten over time
call-top-callable = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
missing-argument = "ignore"
no-matching-overload = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
unknown-argument = "ignore"
not-iterable = "ignore"
possibly-missing-attribute = "ignore"

## Coverage configuration

[tool.coverage.run]
source = ["ariadne_graphql_proxy", "tests"]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
omit = ["*/__about__.py", "*/__main__.py", "*/cli/__init__.py"]
fail_under = 90

## Ruff configuration

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 99

[tool.ruff.lint]
select = ["E", "F", "G", "I", "N", "Q", "UP", "C90", "T20", "TID"]
ignore = ["TID252", "UP006", "UP035"]
task-tags = ["NOTE", "TODO", "FIXME", "HACK", "XXX"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.ruff.lint.isort]
known-first-party = ["ariadne_graphql_proxy"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

# Pytest configuration

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
